Initial css commit

--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
 <body>
 	<header>
 		<h1>Will McCrory</h1>
-	</header>
 
-	<nav>
-		<a href="#">About</a>
-		<a href="#">Portfolio</a>
-		<a href="#">Contact</a>
-	</nav>
+		<nav>
+			<a class ="navbar" href="index.html">About</a>
+			<a class ="navbar" href="portfolio.html">Portfolio</a>
+			<a class ="navbar" href="contact.html">Contact</a>
+		</nav>
+	
+	</header>
 
 	<section class="content">
 		<h2>About Me</h2>
 		<br><hr>
 		
-		<img src="images/profile.jpg" alt="Profile picture" />
-		<p>This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now.</p>
-		<p>Here's a second paragraph. I'll add some actual stuff here later</p>
+		<img id="profilePic" src="images/profile.jpg" alt="Profile picture" />
+		<p>This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now.</p>
+		<br>
+		<p>Here's a second paragraph. I'll add some actual stuff here later.  This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now.</p>
 	</section>
 
 	<section class="sidebar">
-		<h2>Connect With Me</h2>
+		<h3>Connect With Me</h3>
 		<hr>
 		<nav>
-			<a href="#"><img src="images/stack-icon.png" alt="Stack Overflow" /></a>
-			<a href="#"><img src="images/linkedin-icon.png" alt="LinkedIn" /></a>
-			<a href="#"><img src="images/github-icon.png" alt="Github" /></a>
+			<a href="https://stackexchange.com/users/12549763/will"><img class="mediaIcon" src="images/stack-icon.png" alt="Stack Overflow" /></a>
+			<a href="https://www.linkedin.com/in/william-mccrory-849068154/"><img class="mediaIcon" src="images/linkedin-icon.png" alt="LinkedIn" /></a>
+			<a href="https://github.com/Wmccrory"><img class = "mediaIcon" src="images/github-icon.png" alt="Github" /></a>
 		</nav>
 	</section>
 
 	<footer>
-		<p>© Copyright 2018 Will McCrory</p>
+		<p id="legal">© Copyright 2018 Will McCrory</p>
 	</footer>
 
 </body>
