Finalized css template

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<nav>
 			<a class ="navbar" href="index.html">About</a>
-			<a class ="navbar" href="portfolio.html">Portfolio</a>
+			<a class ="navbar" id ="middleNav" href="portfolio.html">Portfolio</a>
 			<a class ="navbar" href="contact.html">Contact</a>
 		</nav>
 	
@@ -33,7 +33,8 @@
 
 	<section class="sidebar">
 		<h3>Connect With Me</h3>
-		<hr>
+		<hr><br>
+
 		<nav>
 			<a href="https://stackexchange.com/users/12549763/will"><img class="mediaIcon" src="images/stack-icon.png" alt="Stack Overflow" /></a>
 			<a href="https://www.linkedin.com/in/william-mccrory-849068154/"><img class="mediaIcon" src="images/linkedin-icon.png" alt="LinkedIn" /></a>
