--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 		<h1>Will McCrory</h1>
 
 		<nav>
-			<a class ="navbar" href="index.html">About</a>
-			<a class ="navbar" id ="middleNav" href="portfolio.html">Portfolio</a>
-			<a class ="navbar" href="contact.html">Contact</a>
+			<a class="navbar" href="index.html">About</a>
+			<div class="seperator"></div>
+			<a class="navbar" href="portfolio.html">Portfolio</a>
+			<div class="seperator"></div>
+			<a class="navbar" href="contact.html">Contact</a>
 		</nav>
 	
 	</header>
 
 	<section class="content">
 		<h2>About Me</h2>
-		<br><hr>
+		<br>
 		
 		<img id="profilePic" src="images/profile.jpg" alt="Profile picture" />
 		<p>This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now. This is just a couple of paragraphs about me. While I love to write about myself all the time, I'm just putting some filler in here right now.</p>
@@ -33,7 +35,7 @@
 
 	<section class="sidebar">
 		<h3>Connect With Me</h3>
-		<hr><br>
+		<br><hr><br>
 
 		<nav>
 			<a href="https://stackexchange.com/users/12549763/will"><img class="mediaIcon" src="images/stack-icon.png" alt="Stack Overflow" /></a>
