Final update of night. Began content for portfolio/contact. Tweaked css

--- a/contact.html
+++ b/contact.html
@@ -14,16 +14,18 @@
 		<h1>Will McCrory</h1>
 
 		<nav>
-			<a class="navbar" href="index.html">About</a>
-			<div class="seperator"></div>
-			<a class="navbar" href="portfolio.html">Portfolio</a>
-			<div class="seperator"></div>
 			<a class="navbar" href="contact.html">Contact</a>
+				<div class="seperator"></div>
+			<a class="navbar" href="portfolio.html">Portfolio</a>
+				<div class="seperator"></div>
+			<a class="navbar" href="index.html">About</a>
 		</nav>
 	
 	</header>
 
 	<section class="content">
+		<h2>Contact Me</h2>
+		<br>
 
 	</section>
 
