adding content to portfolio. Cleaning up css

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,54 @@
 
 	<section class="content">
 		<h2>Portfolio</h2>
-		<br>
+		<br><hr>
 		
+		<container id="portfolio">
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Captain_America">
+					<img src="images/galleryA.jpg" alt="Captain America">
+					<div class="portDesc">Captain America</div>
+				</a>
+			</container>
+
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Spider-Man">
+					<img src="images/galleryB.jpg" alt="Spider-Man">
+					<div class="portDesc">Spider-Man</div>
+				</a>
+			</container>
+
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Iron_Man">
+					<img src="images/galleryC.jpg" alt="Iron Man">
+					<div class="portDesc">Iron Man</div>
+				</a>
+			</container>
+
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Batman">
+					<img src="images/galleryD.jpg" alt="Batman">
+					<div class="portDesc">The Batman</div>
+				</a>
+			</container>
+
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Superman">
+					<img src="images/galleryE.jpg" alt="Superman">
+					<div class="portDesc">Superman</div>
+				</a>
+
+			</container>
+
+			<container class="gallery">
+				<a target="_blank" href="https://en.wikipedia.org/wiki/Flash_(comics)">
+					<img src="images/galleryF.jpg" alt="The Flash">
+					<div class="portDesc">The Flash</div>
+				</a>
+			</container>
+		</container>
+		
+		<div id="spacer"></div>
 	</section>
 
 	<section class="sidebar">
@@ -38,6 +84,7 @@
 			<a href="https://www.linkedin.com/in/william-mccrory-849068154/"><img class="mediaIcon" src="images/linkedin-icon.png" alt="LinkedIn" /></a>
 			<a href="https://github.com/Wmccrory"><img class = "mediaIcon" src="images/github-icon.png" alt="Github" /></a>
 		</nav>
+		
 	</section>
 
 	<footer>
