Adding contactMe content. Tweaked css. Prelim final

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,26 @@
 
 	<section class="content">
 		<h2>Contact Me</h2>
+		<br><hr>
+
+ 		<div class="contactMe">
+			<form action="https://formspree.io/wmccrory@gmail.com" 
+			method="POST">
+				
+				<label for="name">Name</label>
+				<input type="text" id="name" name="name" placeholder="Your name..">
+
+				<label for="email">Email</label>
+				<input type="text" id="email" name="email" placeholder="Your email..">
+
+				<label for="subject">Subject</label>
+				<textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+
+				<input type="submit" value="Submit">
+			</form>
+
+		</div>
+
 		<br>
 
 	</section>
