--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 			</container>
 		</container>
 		
-		<div id="spacer"></div>
+<!-- 		<div id="spacer"></div> -->
 	</section>
 
 	<section class="sidebar">
