Replacing filler text

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 				<input type="text" id="email" name="email" placeholder="Your email..">
 
 				<label for="subject">Subject</label>
-				<textarea id="subject" name="subject" placeholder="Write something.."></textarea>
+				<textarea id="subject" name="subject" placeholder="Let me know how much the check is for.."></textarea>
 
 				<input type="submit" value="Submit">
 			</form>
