Fixing bug in contact form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<img id="profilePic" src="images/profile.jpg" alt="Profile picture" />
 		<p>Born and raised in Austin, a true native son of Texas. Web developer with 1 week experience, one might even call him a "webmaster". However, Will prefers the moniker "technomancer". If you have need for someone who can make a div element float or make a link turn a different color when you hover your mouse over it, you will find no better. A firm believer that the great should never be constrained by the small, freelance work is preferred.</p>
 
-		<p>With all the technobabble above, you could be left with the impression that coding is the only trick Will has up his sleeve. It is an easy mistake to make if judging solely based on this Ozymandius-esque display of html power. However, there are a plethora of other skills beneath the surface. Though you may need to dig deep to find them, <a href="https://i.pinimg.com/736x/b6/98/e8/b698e8aede308208579ec7cda91b1836--dankest-memes-dog-memes.jpg">but beware..</a></p>
+		<p>With all the technobabble above, you could be left with the impression that coding is the only trick Will has up his sleeve. It is an easy mistake to make if judging solely based on this Ozymandias-esque display of html power. However, there are a plethora of other skills beneath the surface. You may need to dig deep to find them, <a href="https://i.pinimg.com/736x/b6/98/e8/b698e8aede308208579ec7cda91b1836--dankest-memes-dog-memes.jpg">but beware..</a></p>
 	</section>
 
 	<section class="sidebar">
